--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -1,52 +1,55 @@
-
-    {% extends "layout.html" %}
-   
-    {% block content %}
-
-    <div class="container">
-        <form name="register" action="" method="post" novalidate>
-            <fieldset class="form-group">
-                {{ title }}
-            </fieldset>
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.first_name.label }} <br>
-                {{ form.first_name(size=12) }}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CryptoTrading</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}"/>
+    </head>
+    <body style="background-image: url(/static/images/background.jpeg)" class="login_register">
+        <div class="register_inbox login_register_inbox">
+            <img src="/static/images/avatar.png" class="avatar">
+            <h1>Sign Up</h1>
+            <form name="register" action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                <p>
+                    {{ form.first_name.label }}
+                    {{ form.first_name() }}
+                </p>
                 {% for error in form.first_name.errors %}
-                    <span class="error-message">{{ error }}</span>
+                <span class="error-message">{{ error }}</span>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.last_name.label }} <br>
-                {{ form.last_name(size=12) }}
+                <p>
+                    {{ form.last_name.label }}
+                    {{ form.last_name() }}
+                </p>
                 {% for error in form.last_name.errors %}
-                    <span class="error-message">{{ error }}</span>
+                <span class="error-message">{{ error }}</span>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.email.label }} <br>
-                {{ form.email(size=35) }}
+                <p>
+                    {{ form.email.label }}
+                    {{ form.email() }}  
+                </p>
                 {% for error in form.email.errors %}
-                    <span class="error-message">{{ error }}</span>
-                {% endfor %}    
-            </p>
-            <p>
-                {{ form.password.label }} <br>
-                {{ form.password(size=15) }}
+                <span class="error-message">{{ error }}</span>
+                {% endfor %}  
+                <p>
+                    {{ form.password.label }}
+                    {{ form.password() }}
+                </p>
                 {% for error in form.password.errors %}
-                    <span class="error-message">{{ error }}</span>
+                <span class="error-message">{{ error }}</span>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.password_confirm.label }} <br>
-                {{ form.password_confirm(size=15) }}
+                <p>
+                    {{ form.password_confirm.label }}
+                    {{ form.password_confirm() }}
+                </p>
                 {% for error in form.password_confirm.errors %}
-                    <span class="error-message">{{ error }}</span>
+                <span class="error-message">{{ error }}</span>
                 {% endfor %}
-            </p>
-            <p>
-                {{ form.submit() }} <br>
-            </p>
-        </form>
-    </div>
-    {% endblock %}
+                <p>{{ form.submit() }} <br></p>
+            </form>
+            <a href="{{ url_for('login') }}">Already have an account</a>
+        </div>
+    </body>
+</html>
