--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -4,8 +4,8 @@
             <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link 
                     {% if index %}active{%endif%}">
                     Home</a></li>
-            <li class="nav-item"><a href="{{ url_for('coins') }}" class="nav-link 
-                        {% if coins %}active{%endif%}">
+            <li class="nav-item"><a href="{{ url_for('currencies') }}" class="nav-link 
+                        {% if currencies %}active{%endif%}">
                     Coins</a></li>
             <li class="nav-item"><a href="{{ url_for('transaction') }}" class="nav-link 
                         {% if transaction %}active{%endif%}">
