--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,32 +1,36 @@
 <header>
-    <nav>
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link 
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <img class="layout_logo nav-link" src="{{ url_for('static',filename='images/logo.jpg') }}">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link 
                     {% if index %}active{%endif%}">
                     Home</a></li>
-            <li class="nav-item"><a href="{{ url_for('currencies') }}" class="nav-link 
+                    <li class="nav-item"><a href="{{ url_for('currencies') }}" class="nav-link 
                         {% if currencies %}active{%endif%}">
                     Coins</a></li>
             <li class="nav-item"><a href="{{ url_for('transaction') }}" class="nav-link 
                         {% if transaction %}active{%endif%}">
                     Transactions</a></li>
-
-            {% if not session['username'] %}
-            <li class="nav-item"><a href="{{ url_for('login') }}" class="nav-link 
-                            {% if login %}active{%endif%}">
-                    Login</a></li>
-            {% endif %}
-
-            {% if not session['username'] %}
-            <li class="nav-item"><a href="{{ url_for('register') }}" class="nav-link 
-                                {% if register %}active{%endif%}">
-                    Register</a></li>
-            {% else %}
-            <li class="nav-item"><a href="{{ url_for('logout') }}" class="nav-link">
-                Logout</a></li>
-            {% endif %}
-
-        </ul>
+            </ul>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                {% if not session['username'] %}
+                <li class="nav-item"><a href="{{ url_for('login') }}" class="nav-link 
+                                {% if login %}active{%endif%}">
+                        Login</a></li>
+                {% endif %}
+    
+                {% if not session['username'] %}
+                <li class="nav-item"><a href="{{ url_for('register') }}" class="nav-link 
+                                    {% if register %}active{%endif%}">
+                        Register</a></li>
+                {% else %}
+                <li class="nav-item"><a href="{{ url_for('logout') }}" class="nav-link">
+                    Logout</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
-    <hr style="clear:both">
 </header>
